# app.js
@@ -13,6 +13,7 @@ const responseHandler = require('./service/responseHandler');
 // router
 const postsRouter = require('./routes/posts');
 const usersRouter = require('./routes/users');
+const uploadsRouter = require('./routes/uploads');
 
 const app = express();
 
@@ -27,6 +28,7 @@ app.use(express.static(path.join(__dirname, 'public')));
 
 app.use('/posts', postsRouter);
 app.use('/users', usersRouter);
+app.use('/uploads', uploadsRouter);
 app.use('/api-doc', swaggerUi.serve, swaggerUi.setup(swaggerFile));
 
 // page not found
