# models/imageModel.js
@@ -1,0 +1,21 @@
+const mongoose = require('mongoose');
+
+const imageSchema = new mongoose.Schema(
+  {
+    url: {
+      type: String,
+      required: [true, '圖片網址為必填']
+    },
+    createdAt: {
+      type: Date,
+      default: Date.now
+    }
+  },
+  {
+    versionKey: false
+  }
+);
+
+const Image = mongoose.model('image', imageSchema);
+
+module.exports = Image;
